// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 Basic paragraph splitting 1`] = `
Object {
  "_00_lines": Array [
    "",
    "This is the",
    "first paragraph.",
    "",
    "",
    "",
    "This is the second paragraph.",
    "",
    "This is the third paragraph.",
    "",
    "",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "This is the",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "first paragraph.",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "This is the second paragraph.",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "This is the third paragraph.",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": undefined,
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": undefined,
  "_09_customBlocks": Array [],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [],
  "_12_logMessages": Array [],
}
`;

exports[`02 Basic paragraph splitting in blocks 1`] = `
Object {
  "_00_lines": Array [
    "P1",
    "@remarks P2",
    "",
    "P3 @deprecated P4",
    "",
    "P5",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "P1",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@remarks",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " P2",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "P3 ",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodes": Array [
          Object {
            "kind": "Excerpt: BlockTag",
            "nodeExcerpt": "@deprecated",
          },
        ],
      },
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " P4",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "P5",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "_06_paramBlocks": Array [],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": undefined,
  "_09_customBlocks": Array [],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [],
  "_12_logMessages": Array [],
}
`;

exports[`03 Degenerate comment framing 1`] = `
Object {
  "_00_lines": Array [
    "line 1",
    "line 2",
    "",
    "  @public line 3",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "line 1",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "line 2",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": "  ",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodes": Array [
              Object {
                "kind": "Excerpt: PlainText",
                "nodeExcerpt": " line 3",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodes": Array [
              Object {
                "kind": "Excerpt: SoftBreak",
                "nodeExcerpt": "[n]",
              },
            ],
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": undefined,
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": undefined,
  "_09_customBlocks": Array [],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodes": Array [
        Object {
          "kind": "Excerpt: BlockTag",
          "nodeExcerpt": "@public",
        },
      ],
    },
  ],
  "_12_logMessages": Array [],
}
`;

exports[`04 Degenerate manually constructed nodes 1`] = `
Object {
  "kind": "Section",
  "nodes": Array [
    Object {
      "kind": "Paragraph",
      "nodes": Array [
        Object {
          "kind": "PlainText",
          "nodePlainText": "  para 1 ",
        },
        Object {
          "kind": "SoftBreak",
        },
        Object {
          "kind": "PlainText",
          "nodePlainText": "   ",
        },
        Object {
          "kind": "SoftBreak",
        },
      ],
    },
    Object {
      "kind": "Paragraph",
      "nodes": Array [
        Object {
          "kind": "PlainText",
          "nodePlainText": " [t]  ",
        },
        Object {
          "kind": "PlainText",
          "nodePlainText": "   ",
        },
        Object {
          "kind": "BlockTag",
        },
        Object {
          "kind": "PlainText",
          "nodePlainText": "  para 2 ",
        },
        Object {
          "kind": "SoftBreak",
        },
        Object {
          "kind": "SoftBreak",
        },
      ],
    },
    Object {
      "kind": "Paragraph",
      "nodes": Array [
        Object {
          "kind": "PlainText",
          "nodePlainText": "  para 3  ",
        },
      ],
    },
    Object {
      "kind": "Paragraph",
    },
  ],
}
`;
